--- a/_config.yaml
+++ b/_config.yaml
@@ -1,11 +1,3 @@
 collections:
   projects:
-    output: true
-
-defaults:
-  -
-    scope:
-      path: ""
-      type: "projects"
-    values:
-      layout: "project"
+    output: false
